Реализовано редатирование имени форума и удаление форума

--- a/First_Forum/Views/Home/Index.cshtml
+++ b/First_Forum/Views/Home/Index.cshtml
@@ -39,7 +39,7 @@
 
 <div>
     <p>
-        @Html.ActionLink("Add forum", "AddForum");
+        @Html.ActionLink("Add forum", "AddForum")
     </p>
 </div>
 
