Сздан контроллер Forum, представления: Index, Create Реализована возможность добавлять новые темы в форум

--- a/First_Forum/Views/Home/Index.cshtml
+++ b/First_Forum/Views/Home/Index.cshtml
@@ -4,12 +4,8 @@
     ViewBag.Title = "Home Page";
 }
 
-<div id="modDialog" class="modal fade">
-    <div id="dialogContent" class="modal-dialog"></div>
-</div>
-
 <div>
-    <table class="table table-bordered table-hover">
+    <table id="td" class="table table-bordered table-hover">
         <thead>
             <tr>
                 <th>Id</th>
