--- a/First_Forum/Views/Topic/Delete.cshtml
+++ b/First_Forum/Views/Topic/Delete.cshtml
@@ -12,29 +12,17 @@
     <h4>Forum_post</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Forum.Name)
-        </dt>
+        @if (Model.Post_id == 1)
+        {
+            <dt>
+                @Html.DisplayNameFor(model => model.Topic)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Forum.Name)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Topic)
+            </dd>
+        }
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Author)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Author)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Topic)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Topic)
-        </dd>
 
         <dt>
             @Html.DisplayNameFor(model => model.Body)
@@ -42,30 +30,6 @@
 
         <dd>
             @Html.DisplayFor(model => model.Body)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Date)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Date)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Post_id)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Post_id)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Topic_id)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Topic_id)
         </dd>
 
     </dl>
