--- a/First_Forum/Views/Shared/Error.cshtml
+++ b/First_Forum/Views/Shared/Error.cshtml
@@ -1,9 +1,27 @@
 ﻿@model System.Web.Mvc.HandleErrorInfo
 
 @{
-    ViewBag.Title = "Error";
+    Layout = null;
 }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta name="viewport" content="width = device-width" />
+    <title>Error</title>
+</head>
 
+<body>
+    <h2>
+        Sorry, an error occurred while processing your request.
+    </h2>
+    <h2>Exception details</h2>
+
+    <p>
+        Controller: @Model.ControllerName <br>
+        Action: @Model.ActionName
+        Exception: @Model.Exception
+    </p>
+
+</body>
+</html> 
