Добавил разраничение по ролям

--- a/First_Forum/Views/Forum/Delete.cshtml
+++ b/First_Forum/Views/Forum/Delete.cshtml
@@ -5,10 +5,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete</h2>
+<h2>Delete topic</h2>
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>TopicsInfo</h4>
+
     <hr />
     <dl class="dl-horizontal">
 
@@ -35,8 +35,11 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Delete" class="btn btn-default" />    
+        </div>
+
+        <div>
+            @Html.ActionLink("Back to topics", "Index", new { id = Model.Forum_id})
         </div>
     }
 </div>
