--- a/First_Forum/Views/Topic/Index.cshtml
+++ b/First_Forum/Views/Topic/Index.cshtml
@@ -5,48 +5,46 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("New post", "Create").
 </p>
 <table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Topic)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Body)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Author)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Date)
-        </th>
-       
-    </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Topic)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Body)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Author)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Date)
-        </td>
+    @foreach (var item in Model) {
+    <table border="0" class="table table-bordered">
+        <tr>
+            <td rowspan="2">
+                @Html.DisplayFor(modelItem => item.Author)
+            </td>
+
+            <td >
+                @Html.DisplayFor(modelItem => item.Topic)
+            </td>
+        </tr>
+        <tr>
+            <td colspan="4" rowspan="2">
+                @Html.DisplayFor(modelItem => item.Body)
+            </td>
+        </tr>
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Date)
+            </td>
+            @if (ViewBag.Name == item.Author || ViewBag.AdminRole == true)
+            {
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                </td>
+            }
+
+        </tr>
+
+    </table>
+    <br />
+    <hr/>
         
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+    }
 
 </table>
