--- a/First_Forum/Views/Home/DeleteForum.cshtml
+++ b/First_Forum/Views/Home/DeleteForum.cshtml
@@ -5,11 +5,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>DeleteForum</h2>
+<h2>Delete Forum</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Forum</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -27,8 +26,10 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Delete" class="btn btn-default" />  
+        </div>
+        <div>
+            @Html.ActionLink("Back to forum", "Index")
         </div>
     }
 </div>
