--- a/First_Forum/Views/Topic/Delete.cshtml
+++ b/First_Forum/Views/Topic/Delete.cshtml
@@ -9,7 +9,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Forum_post</h4>
+
     <hr />
     <dl class="dl-horizontal">
         @if (Model.Post_id == 1)
@@ -38,8 +38,11 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Delete" class="btn btn-default" />
+        </div>
+
+        <div>
+            @Html.ActionLink("Back to topic", "Index", new { id = Model.Topic_id })
         </div>
     }
 </div>
